# semantic-memory

./: .gitignore  AGENTS.md  BUGFIXES_V3.md  CLAUDE.md  Cargo.toml  LICENSE  PROMPT_V3.md  README.md  RECALL_ROLE_NAMING_DELETE_FIX.md  START_HERE.md
examples/: basic_search.rs  conversation_memory.rs
src/: chunker.rs  config.rs  conversation.rs  db.rs  documents.rs  embedder.rs  episodes.rs  error.rs  graph.rs  hnsw.rs  json_compat_import.rs  knowledge.rs  lib.rs  pool.rs  projection_batch.rs  projection_derivation.rs  projection_import.rs  projection_lane.rs  projection_legacy_compat.rs  projection_storage.rs  quantize.rs  search.rs  storage.rs  store_support.rs  tokenizer.rs  types.rs
tests/: brute_force_parity.rs  chunker_tests.rs  compaction.rs  concurrent_access.rs  conversation_search_tests.rs  conversation_tests.rs  db_tests.rs  episode_identity.rs  hardening_semantics.rs  hardening_v5.rs  hnsw_hotswap.rs  hnsw_integration.rs  hnsw_persistence.rs  import_boundary_tests.rs  import_ugly_cases.rs  integration_tests.rs  knowledge_tests.rs  migration_v5.rs  projection_v11_tests.rs  quantization.rs  quantization_pipeline.rs  search_tests.rs  step3_verification.rs  step4_verification.rs  storage_lifecycle.rs  tokenizer_tests.rs  trace_id_write_seam.rs  vector_only_hnsw.rs
