[package]
name = "semantic-memory"
version = "0.3.0"
edition = "2021"
description = "Hybrid semantic search with SQLite, FTS5, and HNSW — built for AI agents"

[features]
default = ["hnsw"]
hnsw = ["dep:hnsw_rs"]
brute-force = []
testing = []

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "blob"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
thiserror = "2"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# HNSW approximate nearest neighbor search (optional)
hnsw_rs = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
